# tesseract

./: CMakeLists.txt
.github/workflows/: autotools-macos.yml  autotools.yml  cifuzz.yml  cmake-win64.yml  cmake.yml  codeql-analysis.yml  msys2-4.1.1.yml  msys2.yml  sw.yml  unittest-disablelegacy.yml  unittest-macos.yml  unittest.yml  vcpkg.yml
src/api/: pdfrenderer.cpp
unittest/: CMakeLists.txt
